
What's New in Python 2.7 beta 1?
================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #3137: Don't ignore errors at startup, especially a keyboard interrupt
  (SIGINT).  If an error occurs while importing the site module, the error is
  printed and Python exits.  Initialize the GIL before importing the site
  module.

Library
-------

- Issue #8140: extend compileall to compile single files. Add -i option.

- Issue #7356: ctypes.util: Make parsing of ldconfig output independent of
  the locale.

- Issue #7774: Set sys.executable to an empty string if ``argv[0]`` has been
  set to an non existent program name and Python is unable to retrieve the real
  program name.

- Issue #8117: logging: Improved algorithm for computing initial rollover time
  for ``TimedRotatingFileHandler`` by using the modification time of an
  existing log file to compute the next rollover time.  If the log file does
  not exist, the current time is used as the basis for the computation.

- Issue #6472: The ``xml.etree`` package is updated to ElementTree 1.3.  The
  cElementTree module is updated too.

- Issue #7880: Fix sysconfig when the python executable is a symbolic link.

- Issue #7624: Fix ``isinstance(foo(), collections.Callable)`` for old-style
  classes.

- Issue #7143: email: ``get_payload()`` used to strip any trailing newline from
  a base64 transfer-encoded payload *after* decoding it; it no longer does.
  This is a behavior change, so email's minor version number is now bumped, to
  version 4.0.2, for the 2.7 release.

Extension Modules
-----------------

- Issue #6949: Allow the _bsddb extension to be built with db-4.8.x.

- Issue #8142: Update libffi to the 3.0.9 release.

- Issue #1530559: When passing a non-integer argument to struct.pack with *any*
  integer format code (one of 'bBhHiIlLqQ'), struct.pack attempts to use the
  argument's __int__ method to convert to an integer before packing.  It also