@@ -20,6 +20,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4961: Inconsistent/wrong result of askyesno function in tkMessageBox
+  with Tcl/Tk-8.5.
+
 - Issue #8140: extend compileall to compile single files. Add -i option.
 
 - Issue #7356: ctypes.util: Make parsing of ldconfig output independent of
